# phonexia-assignment

./: .gitmodules  CMakeLists.txt  README.md
src/: .clang_complete  CMakeLists.txt  bill.hpp  billManager.cpp  billManager.hpp  main.cpp  record.hpp  tariff.hpp
test/: .clang_complete  CMakeLists.txt  billManager.cpp
